--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> HI </title>
+		<title>I'm GAY and my name is Kyle</title>
 		<style>
 		h1{
-		font-family: Times New Roman;
-		color: limegreen;
-	        text-align: center;
+		font-family: Times New ass;
+		color: limegay;
+	        text-align: center-butthole;
 		}
 
 		</style>
 		<body>
-		<h1>Hello World</h1>
+		<h1>Hello Penis</h1>
 			
 	 </body>
 	</head>
